--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Cookies Extractor",
-  "version": "2.0.2",
+  "name": "Ebay Conversation",
+  "version": "1.0.0",
   "permissions": ["scripting", "activeTab", "cookies", "tabs", "storage"],
   "host_permissions": ["<all_urls>"],
   "background": {
